--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.0.Final</version>
+		</dependency>
+
 
 		<!-- DevOps -->
 		<dependency>
@@ -89,6 +95,18 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
+
+		<!-- Log -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.14.2</version>
+		</dependency>
+
 		<!-- Test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -110,7 +128,7 @@
 				<configuration>
 					<environmentVariables>
 						<LOG_PATH>./target/log</LOG_PATH>
-						<DB_PATH>./target</DB_PATH>
+						<DB_PATH>./target/db</DB_PATH>
 					</environmentVariables>
 				</configuration>
 			</plugin>
@@ -121,9 +139,6 @@
 	<profiles>
 		<profile>
 			<id>ddl-gen</id>
-			<properties>
-				<skip.npm.build>true</skip.npm.build>
-			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -131,7 +146,9 @@
 						<artifactId>spring-boot-maven-plugin</artifactId>
 						<configuration>
 							<environmentVariables>
-								<LOG_PATH>./target/log</LOG_PATH>
+								<environmentVariables>
+									<LOG_PATH>./target/log</LOG_PATH>
+								</environmentVariables>
 							</environmentVariables>
 							<arguments>
 								<argument>--spring.datasource.url=jdbc:h2:mem:ddl-gen-db</argument>
