Added Auditing, EntVers and HTTP client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+# See: https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
+
 #server:
 #  port: 8080
 #  forward-headers-strategy: native
