--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,10 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-envers</artifactId>
+		</dependency>
 
 		<!-- DevOps -->
 		<dependency>
